// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerView meridiem hour snapshot 1`] = `
<DocumentFragment>
  <div
    class="za-picker-view"
  >
    <div
      class="za-picker-view__content"
    >
      <div
        class="za-wheel"
      >
        <div
          class="za-wheel__content"
          style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-property: transform; transition-duration: 800ms; transform: translateX(0px) translateY(NaNpx);"
        >
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            上午
          </div>
          <div
            class="za-wheel__item za-wheel__item--selected"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            下午
          </div>
        </div>
      </div>
      <div
        class="za-wheel"
      >
        <div
          class="za-wheel__content"
          style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-property: transform; transition-duration: 800ms; transform: translateX(0px) translateY(NaNpx);"
        >
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            12时
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            1时
          </div>
          <div
            class="za-wheel__item za-wheel__item--selected"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2时
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            3时
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            4时
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            5时
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            6时
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            7时
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            8时
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            9时
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            10时
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            11时
          </div>
        </div>
      </div>
      <div
        class="za-wheel"
      >
        <div
          class="za-wheel__content"
          style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-property: transform; transition-duration: 800ms; transform: translateX(0px) translateY(NaNpx);"
        >
          <div
            class="za-wheel__item za-wheel__item--selected"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            0分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            1分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            3分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            4分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            5分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            6分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            7分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            8分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            9分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            10分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            11分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            12分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            13分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            14分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            15分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            16分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            17分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            18分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            19分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            20分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            21分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            22分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            23分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            24分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            25分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            26分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            27分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            28分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            29分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            30分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            31分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            32分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            33分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            34分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            35分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            36分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            37分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            38分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            39分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            40分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            41分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            42分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            43分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            44分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            45分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            46分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            47分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            48分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            49分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            50分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            51分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            52分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            53分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            54分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            55分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            56分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            57分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            58分
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            59分
          </div>
        </div>
      </div>
    </div>
    <div
      class="za-picker-view__mask za-picker-view__mask--top"
    />
    <div
      class="za-picker-view__mask za-picker-view__mask--bottom"
    />
  </div>
</DocumentFragment>
`;

exports[`DatePickerView snapshot 1`] = `
<DocumentFragment>
  <div
    class="za-picker-view"
  >
    <div
      class="za-picker-view__content"
    >
      <div
        class="za-wheel"
      >
        <div
          class="za-wheel__content"
          style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-property: transform; transition-duration: 800ms; transform: translateX(0px) translateY(NaNpx);"
        >
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2014年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2015年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2016年
          </div>
          <div
            class="za-wheel__item za-wheel__item--selected"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2017年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2018年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2019年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2020年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2021年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2022年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2023年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2024年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2025年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2026年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2027年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2028年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2029年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2030年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2031年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2032年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2033年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2034年
          </div>
        </div>
      </div>
      <div
        class="za-wheel"
      >
        <div
          class="za-wheel__content"
          style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-property: transform; transition-duration: 800ms; transform: translateX(0px) translateY(NaNpx);"
        >
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            1月
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2月
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            3月
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            4月
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            5月
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            6月
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            7月
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            8月
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            9月
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            10月
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            11月
          </div>
          <div
            class="za-wheel__item za-wheel__item--selected"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            12月
          </div>
        </div>
      </div>
      <div
        class="za-wheel"
      >
        <div
          class="za-wheel__content"
          style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-property: transform; transition-duration: 800ms; transform: translateX(0px) translateY(NaNpx);"
        >
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            1日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2日
          </div>
          <div
            class="za-wheel__item za-wheel__item--selected"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            3日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            4日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            5日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            6日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            7日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            8日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            9日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            10日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            11日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            12日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            13日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            14日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            15日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            16日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            17日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            18日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            19日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            20日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            21日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            22日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            23日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            24日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            25日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            26日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            27日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            28日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            29日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            30日
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            31日
          </div>
        </div>
      </div>
    </div>
    <div
      class="za-picker-view__mask za-picker-view__mask--top"
    />
    <div
      class="za-picker-view__mask za-picker-view__mask--bottom"
    />
  </div>
</DocumentFragment>
`;

exports[`DatePickerView week snapshot 1`] = `
<DocumentFragment>
  <div
    class="za-picker-view"
  >
    <div
      class="za-picker-view__content"
    >
      <div
        class="za-wheel"
      >
        <div
          class="za-wheel__content"
          style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-property: transform; transition-duration: 800ms; transform: translateX(0px) translateY(NaNpx);"
        >
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2014年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2015年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2016年
          </div>
          <div
            class="za-wheel__item za-wheel__item--selected"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2017年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2018年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2019年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2020年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2021年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2022年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2023年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2024年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2025年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2026年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2027年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2028年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2029年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2030年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2031年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2032年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2033年
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2034年
          </div>
        </div>
      </div>
      <div
        class="za-wheel"
      >
        <div
          class="za-wheel__content"
          style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-property: transform; transition-duration: 800ms; transform: translateX(0px) translateY(NaNpx);"
        >
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            1周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            2周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            3周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            4周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            5周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            6周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            7周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            8周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            9周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            10周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            11周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            12周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            13周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            14周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            15周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            16周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            17周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            18周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            19周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            20周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            21周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            22周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            23周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            24周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            25周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            26周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            27周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            28周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            29周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            30周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            31周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            32周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            33周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            34周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            35周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            36周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            37周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            38周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            39周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            40周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            41周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            42周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            43周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            44周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            45周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            46周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            47周
          </div>
          <div
            class="za-wheel__item za-wheel__item--selected"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            48周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            49周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            50周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            51周
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            52周
          </div>
        </div>
      </div>
      <div
        class="za-wheel"
      >
        <div
          class="za-wheel__content"
          style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-property: transform; transition-duration: 800ms; transform: translateX(0px) translateY(NaNpx);"
        >
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            周一
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            周二
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            周三
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            周四
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            周五
          </div>
          <div
            class="za-wheel__item"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            周六
          </div>
          <div
            class="za-wheel__item za-wheel__item--selected"
            style="transform: rotateX(NaNdeg); transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; pointer-events: none;"
          >
            周日
          </div>
        </div>
      </div>
    </div>
    <div
      class="za-picker-view__mask za-picker-view__mask--top"
    />
    <div
      class="za-picker-view__mask za-picker-view__mask--bottom"
    />
  </div>
</DocumentFragment>
`;

exports[`DatePickerView DatePickerView time 3 1`] = `
<ForwardRef(forwardRef)
  max="21:00"
  min="11:00"
  mode="time"
>
  <ConfigReceiver
    forwardedRef={null}
    max="21:00"
    min="11:00"
    mode="time"
  >
    <DatePickerView
      disabled={false}
      locale={
        Object {
          "day": "日",
          "hour": "时",
          "minute": "分",
          "month": "月",
          "year": "年",
        }
      }
      localeCode="zh-CN"
      max="21:00"
      min="11:00"
      minuteStep={1}
      mode="time"
      prefixCls="za-date-picker-view"
      stopScroll={false}
      valueMember="value"
    >
      <PickerView
        cols={Infinity}
        dataSource={
          Array [
            Array [
              Object {
                "label": "11时",
                "value": 11,
              },
              Object {
                "label": "12时",
                "value": 12,
              },
              Object {
                "label": "13时",
                "value": 13,
              },
              Object {
                "label": "14时",
                "value": 14,
              },
              Object {
                "label": "15时",
                "value": 15,
              },
              Object {
                "label": "16时",
                "value": 16,
              },
              Object {
                "label": "17时",
                "value": 17,
              },
              Object {
                "label": "18时",
                "value": 18,
              },
              Object {
                "label": "19时",
                "value": 19,
              },
              Object {
                "label": "20时",
                "value": 20,
              },
              Object {
                "label": "21时",
                "value": 21,
              },
            ],
            Array [
              Object {
                "label": "0分",
                "value": 0,
              },
              Object {
                "label": "1分",
                "value": 1,
              },
              Object {
                "label": "2分",
                "value": 2,
              },
              Object {
                "label": "3分",
                "value": 3,
              },
              Object {
                "label": "4分",
                "value": 4,
              },
              Object {
                "label": "5分",
                "value": 5,
              },
              Object {
                "label": "6分",
                "value": 6,
              },
              Object {
                "label": "7分",
                "value": 7,
              },
              Object {
                "label": "8分",
                "value": 8,
              },
              Object {
                "label": "9分",
                "value": 9,
              },
              Object {
                "label": "10分",
                "value": 10,
              },
              Object {
                "label": "11分",
                "value": 11,
              },
              Object {
                "label": "12分",
                "value": 12,
              },
              Object {
                "label": "13分",
                "value": 13,
              },
              Object {
                "label": "14分",
                "value": 14,
              },
              Object {
                "label": "15分",
                "value": 15,
              },
              Object {
                "label": "16分",
                "value": 16,
              },
              Object {
                "label": "17分",
                "value": 17,
              },
              Object {
                "label": "18分",
                "value": 18,
              },
              Object {
                "label": "19分",
                "value": 19,
              },
              Object {
                "label": "20分",
                "value": 20,
              },
              Object {
                "label": "21分",
                "value": 21,
              },
              Object {
                "label": "22分",
                "value": 22,
              },
              Object {
                "label": "23分",
                "value": 23,
              },
              Object {
                "label": "24分",
                "value": 24,
              },
              Object {
                "label": "25分",
                "value": 25,
              },
              Object {
                "label": "26分",
                "value": 26,
              },
              Object {
                "label": "27分",
                "value": 27,
              },
              Object {
                "label": "28分",
                "value": 28,
              },
              Object {
                "label": "29分",
                "value": 29,
              },
              Object {
                "label": "30分",
                "value": 30,
              },
              Object {
                "label": "31分",
                "value": 31,
              },
              Object {
                "label": "32分",
                "value": 32,
              },
              Object {
                "label": "33分",
                "value": 33,
              },
              Object {
                "label": "34分",
                "value": 34,
              },
              Object {
                "label": "35分",
                "value": 35,
              },
              Object {
                "label": "36分",
                "value": 36,
              },
              Object {
                "label": "37分",
                "value": 37,
              },
              Object {
                "label": "38分",
                "value": 38,
              },
              Object {
                "label": "39分",
                "value": 39,
              },
              Object {
                "label": "40分",
                "value": 40,
              },
              Object {
                "label": "41分",
                "value": 41,
              },
              Object {
                "label": "42分",
                "value": 42,
              },
              Object {
                "label": "43分",
                "value": 43,
              },
              Object {
                "label": "44分",
                "value": 44,
              },
              Object {
                "label": "45分",
                "value": 45,
              },
              Object {
                "label": "46分",
                "value": 46,
              },
              Object {
                "label": "47分",
                "value": 47,
              },
              Object {
                "label": "48分",
                "value": 48,
              },
              Object {
                "label": "49分",
                "value": 49,
              },
              Object {
                "label": "50分",
                "value": 50,
              },
              Object {
                "label": "51分",
                "value": 51,
              },
              Object {
                "label": "52分",
                "value": 52,
              },
              Object {
                "label": "53分",
                "value": 53,
              },
              Object {
                "label": "54分",
                "value": 54,
              },
              Object {
                "label": "55分",
                "value": 55,
              },
              Object {
                "label": "56分",
                "value": 56,
              },
              Object {
                "label": "57分",
                "value": 57,
              },
              Object {
                "label": "58分",
                "value": 58,
              },
              Object {
                "label": "59分",
                "value": 59,
              },
            ],
          ]
        }
        disabled={false}
        itemRender={[Function]}
        locale={
          Object {
            "day": "日",
            "hour": "时",
            "minute": "分",
            "month": "月",
            "year": "年",
          }
        }
        localeCode="zh-CN"
        max="21:00"
        min="11:00"
        minuteStep={1}
        mode="time"
        onChange={[Function]}
        prefixCls="za-date-picker-view"
        stopScroll={false}
        value={
          Array [
            18,
            34,
          ]
        }
        valueMember="value"
      >
        <div
          className="za-date-picker-view"
        >
          <div
            className="za-date-picker-view__content"
          >
            <Wheel
              dataSource={
                Array [
                  Object {
                    "label": "11时",
                    "value": 11,
                  },
                  Object {
                    "label": "12时",
                    "value": 12,
                  },
                  Object {
                    "label": "13时",
                    "value": 13,
                  },
                  Object {
                    "label": "14时",
                    "value": 14,
                  },
                  Object {
                    "label": "15时",
                    "value": 15,
                  },
                  Object {
                    "label": "16时",
                    "value": 16,
                  },
                  Object {
                    "label": "17时",
                    "value": 17,
                  },
                  Object {
                    "label": "18时",
                    "value": 18,
                  },
                  Object {
                    "label": "19时",
                    "value": 19,
                  },
                  Object {
                    "label": "20时",
                    "value": 20,
                  },
                  Object {
                    "label": "21时",
                    "value": 21,
                  },
                ]
              }
              disabled={false}
              itemRender={[Function]}
              key="0"
              onChange={[Function]}
              prefixCls="za-wheel"
              stopScroll={false}
              value={18}
              valueMember="value"
            >
              <div
                className="za-wheel"
              >
                <div
                  className="za-wheel__content"
                >
                  <div
                    className="za-wheel__item"
                    key="0"
                  >
                    11时
                  </div>
                  <div
                    className="za-wheel__item"
                    key="1"
                  >
                    12时
                  </div>
                  <div
                    className="za-wheel__item"
                    key="2"
                  >
                    13时
                  </div>
                  <div
                    className="za-wheel__item"
                    key="3"
                  >
                    14时
                  </div>
                  <div
                    className="za-wheel__item"
                    key="4"
                  >
                    15时
                  </div>
                  <div
                    className="za-wheel__item"
                    key="5"
                  >
                    16时
                  </div>
                  <div
                    className="za-wheel__item"
                    key="6"
                  >
                    17时
                  </div>
                  <div
                    className="za-wheel__item za-wheel__item--selected"
                    key="7"
                  >
                    18时
                  </div>
                  <div
                    className="za-wheel__item"
                    key="8"
                  >
                    19时
                  </div>
                  <div
                    className="za-wheel__item"
                    key="9"
                  >
                    20时
                  </div>
                  <div
                    className="za-wheel__item"
                    key="10"
                  >
                    21时
                  </div>
                </div>
              </div>
            </Wheel>
            <Wheel
              dataSource={
                Array [
                  Object {
                    "label": "0分",
                    "value": 0,
                  },
                  Object {
                    "label": "1分",
                    "value": 1,
                  },
                  Object {
                    "label": "2分",
                    "value": 2,
                  },
                  Object {
                    "label": "3分",
                    "value": 3,
                  },
                  Object {
                    "label": "4分",
                    "value": 4,
                  },
                  Object {
                    "label": "5分",
                    "value": 5,
                  },
                  Object {
                    "label": "6分",
                    "value": 6,
                  },
                  Object {
                    "label": "7分",
                    "value": 7,
                  },
                  Object {
                    "label": "8分",
                    "value": 8,
                  },
                  Object {
                    "label": "9分",
                    "value": 9,
                  },
                  Object {
                    "label": "10分",
                    "value": 10,
                  },
                  Object {
                    "label": "11分",
                    "value": 11,
                  },
                  Object {
                    "label": "12分",
                    "value": 12,
                  },
                  Object {
                    "label": "13分",
                    "value": 13,
                  },
                  Object {
                    "label": "14分",
                    "value": 14,
                  },
                  Object {
                    "label": "15分",
                    "value": 15,
                  },
                  Object {
                    "label": "16分",
                    "value": 16,
                  },
                  Object {
                    "label": "17分",
                    "value": 17,
                  },
                  Object {
                    "label": "18分",
                    "value": 18,
                  },
                  Object {
                    "label": "19分",
                    "value": 19,
                  },
                  Object {
                    "label": "20分",
                    "value": 20,
                  },
                  Object {
                    "label": "21分",
                    "value": 21,
                  },
                  Object {
                    "label": "22分",
                    "value": 22,
                  },
                  Object {
                    "label": "23分",
                    "value": 23,
                  },
                  Object {
                    "label": "24分",
                    "value": 24,
                  },
                  Object {
                    "label": "25分",
                    "value": 25,
                  },
                  Object {
                    "label": "26分",
                    "value": 26,
                  },
                  Object {
                    "label": "27分",
                    "value": 27,
                  },
                  Object {
                    "label": "28分",
                    "value": 28,
                  },
                  Object {
                    "label": "29分",
                    "value": 29,
                  },
                  Object {
                    "label": "30分",
                    "value": 30,
                  },
                  Object {
                    "label": "31分",
                    "value": 31,
                  },
                  Object {
                    "label": "32分",
                    "value": 32,
                  },
                  Object {
                    "label": "33分",
                    "value": 33,
                  },
                  Object {
                    "label": "34分",
                    "value": 34,
                  },
                  Object {
                    "label": "35分",
                    "value": 35,
                  },
                  Object {
                    "label": "36分",
                    "value": 36,
                  },
                  Object {
                    "label": "37分",
                    "value": 37,
                  },
                  Object {
                    "label": "38分",
                    "value": 38,
                  },
                  Object {
                    "label": "39分",
                    "value": 39,
                  },
                  Object {
                    "label": "40分",
                    "value": 40,
                  },
                  Object {
                    "label": "41分",
                    "value": 41,
                  },
                  Object {
                    "label": "42分",
                    "value": 42,
                  },
                  Object {
                    "label": "43分",
                    "value": 43,
                  },
                  Object {
                    "label": "44分",
                    "value": 44,
                  },
                  Object {
                    "label": "45分",
                    "value": 45,
                  },
                  Object {
                    "label": "46分",
                    "value": 46,
                  },
                  Object {
                    "label": "47分",
                    "value": 47,
                  },
                  Object {
                    "label": "48分",
                    "value": 48,
                  },
                  Object {
                    "label": "49分",
                    "value": 49,
                  },
                  Object {
                    "label": "50分",
                    "value": 50,
                  },
                  Object {
                    "label": "51分",
                    "value": 51,
                  },
                  Object {
                    "label": "52分",
                    "value": 52,
                  },
                  Object {
                    "label": "53分",
                    "value": 53,
                  },
                  Object {
                    "label": "54分",
                    "value": 54,
                  },
                  Object {
                    "label": "55分",
                    "value": 55,
                  },
                  Object {
                    "label": "56分",
                    "value": 56,
                  },
                  Object {
                    "label": "57分",
                    "value": 57,
                  },
                  Object {
                    "label": "58分",
                    "value": 58,
                  },
                  Object {
                    "label": "59分",
                    "value": 59,
                  },
                ]
              }
              disabled={false}
              itemRender={[Function]}
              key="1"
              onChange={[Function]}
              prefixCls="za-wheel"
              stopScroll={false}
              value={34}
              valueMember="value"
            >
              <div
                className="za-wheel"
              >
                <div
                  className="za-wheel__content"
                >
                  <div
                    className="za-wheel__item"
                    key="0"
                  >
                    0分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="1"
                  >
                    1分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="2"
                  >
                    2分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="3"
                  >
                    3分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="4"
                  >
                    4分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="5"
                  >
                    5分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="6"
                  >
                    6分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="7"
                  >
                    7分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="8"
                  >
                    8分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="9"
                  >
                    9分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="10"
                  >
                    10分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="11"
                  >
                    11分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="12"
                  >
                    12分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="13"
                  >
                    13分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="14"
                  >
                    14分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="15"
                  >
                    15分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="16"
                  >
                    16分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="17"
                  >
                    17分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="18"
                  >
                    18分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="19"
                  >
                    19分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="20"
                  >
                    20分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="21"
                  >
                    21分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="22"
                  >
                    22分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="23"
                  >
                    23分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="24"
                  >
                    24分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="25"
                  >
                    25分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="26"
                  >
                    26分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="27"
                  >
                    27分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="28"
                  >
                    28分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="29"
                  >
                    29分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="30"
                  >
                    30分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="31"
                  >
                    31分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="32"
                  >
                    32分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="33"
                  >
                    33分
                  </div>
                  <div
                    className="za-wheel__item za-wheel__item--selected"
                    key="34"
                  >
                    34分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="35"
                  >
                    35分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="36"
                  >
                    36分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="37"
                  >
                    37分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="38"
                  >
                    38分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="39"
                  >
                    39分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="40"
                  >
                    40分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="41"
                  >
                    41分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="42"
                  >
                    42分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="43"
                  >
                    43分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="44"
                  >
                    44分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="45"
                  >
                    45分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="46"
                  >
                    46分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="47"
                  >
                    47分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="48"
                  >
                    48分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="49"
                  >
                    49分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="50"
                  >
                    50分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="51"
                  >
                    51分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="52"
                  >
                    52分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="53"
                  >
                    53分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="54"
                  >
                    54分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="55"
                  >
                    55分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="56"
                  >
                    56分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="57"
                  >
                    57分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="58"
                  >
                    58分
                  </div>
                  <div
                    className="za-wheel__item"
                    key="59"
                  >
                    59分
                  </div>
                </div>
              </div>
            </Wheel>
          </div>
          <div
            className="za-date-picker-view__mask za-date-picker-view__mask--top"
          />
          <div
            className="za-date-picker-view__mask za-date-picker-view__mask--bottom"
          />
        </div>
      </PickerView>
    </DatePickerView>
  </ConfigReceiver>
</ForwardRef(forwardRef)>
`;
